# image-captioning

./: .gitignore  README.md  pyproject.toml
data/raw/: tiny-trcap-en.json  tiny-trcap.json
model_training/: build_vocab.py  dataloader.py  dataset.py  eval_resultsv1.json  eval_resultsv2.json  evaluate.py  inference.py  model.py  modelv1.py  modelv2.py  modelv3.py  train.py  training_evaluation.ipynb  vocab.json
src/: app.py
